<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="40dp"
        android:text="Привет,"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="102dp"
        android:gravity="center"
        android:text="Создай аккаунт"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="12sp"
        android:gravity="bottom"
        android:text="@string/cdkf"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="131dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button3"
        android:gravity="bottom"
        android:text="@string/jhdfj"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button3"
        android:layout_marginRight="30dp"
        android:textSize="12sp"
        android:layout_marginLeft="30dp"
        android:gravity="bottom"
        android:text="@string/jhdffhg"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button3"
        android:gravity="bottom"
        android:text="@string/mmm"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_editor_absoluteX="30dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/image4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button2"
        android:text="@string/rrr"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/image5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jgvgki"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Имеете уже аккаунт"
            />


</androidx.constraintlayout.widget.ConstraintLayout>